# trustedrouter-benchmarks

./: .gitignore  CALIBRATION.md  EVALS.md  NOTICE  README.md  REPORT.md  TERMINALBENCH_SETUP.md  pyproject.toml
docs/: HANDOFF.md  HANDOFF_fusion_agentic.md  agentic_fusion_explore_plan.md  bio_benchmark_prioritization.md  fusion_agentic_findings.md  lab_bench_litqa2_synthesis_experiment_log.md  mixed_bio_synthesis_experiment_log.md  model_adapter_research_open_panel.md  scicode_results.md  synthesis_model_roadmap.md  terminal_bench_hard_short_experiment_log.md  terminalbench2_hard30.md  terminalbench2_results.md  terminalbench_results.md
results/: _aider_smoke.json  _aime_smoke.json  _gsm8k_smoke.json  _ifeval_smoke.json  _math500_smoke.json  _sqv_calib_fix.json  _sqv_smoke.json  aiiq_rankings_snapshot.json  aime_calib_gemini25flash.json  aime_calib_gemini25flash_32k.json  aime_calib_gemini25flash_64k.json  aime_calib_gemini25flash_thinking.json  aime_calib_gemini25flash_thinking64k.json  beam_128k_calib.json  beam_128k_calib.jsonl  beam_128k_mini.json  beam_128k_mini.jsonl  beam_128k_panel.json  beam_128k_panel.jsonl  beam_128k_smoke.json  bfcl_dsv4.json  bfcl_fusion_k27_4096.json  bfcl_fusion_kimi_glm.json  bfcl_fusion_parallel.json  bfcl_fusion_smoke.json  bfcl_live_fusion.json  bfcl_live_solos.json  bfcl_smoke.json  expanded_bio_check_table_16.md  frontier_reference_adapter_short_packet.json  gemini35flash_provider_probe.json  gemma4_provider_probe.json  glm52_litqa2_provider_probe_summary.json  gpt55_provider_probe.json  gsm8k_anchors.json  gsm8k_panel.json  gsm8k_panel_clean.json  ifeval_calib.json  ifeval_calib_pro_rerun.json  ifeval_glm52_tinfoil.json  (+143 more)
scicode/: .gitignore  VENDOR_SETUP.md
scripts/: fusion_confirm.py  fusion_consensus_sim.py  (+50 more)
(+28652 files in other folders)
