[project]
name = "trbench"
version = "0.1.0"
description = "TrustedRouter capability benchmarks on the Chinese open-weight model panel (IFEval first)."
requires-python = ">=3.10"
dependencies = [
    "nltk>=3.8",
    "langdetect>=1.0.9",
    "immutabledict>=4.0.0",
    "absl-py>=2.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trbench"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["trbench/evals/ifeval/vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S310"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "E501"]
